--- a/isg-init.org
+++ b/isg-init.org
@@ -86,29 +86,82 @@
 
 * helper functions
 #+BEGIN_SRC emacs-lisp
-;;; display 'fn' as the lambda symbol
-(defun pretty-fn nil
-  (font-lock-add-keywords
-   nil `(("(\\(fn\\>\\)"
-          (0 (progn (compose-region (match-beginning 1) (match-end 1)
-                                    ,(make-char 'greek-iso8859-7 107))
-                    nil)))
-         ("\\(#\\)("
-          (0 (progn (compose-region (match-beginning 1) (match-end 1)
-                                    402)
-                    nil))))))
+  ;;; display 'fn' as the lambda symbol
+  (defun pretty-fn nil
+    (font-lock-add-keywords
+     nil `(("(\\(fn\\>\\)"
+            (0 (progn (compose-region (match-beginning 1) (match-end 1)
+                                      ,(make-char 'greek-iso8859-7 107))
+                      nil)))
+           ("\\(#\\)("
+            (0 (progn (compose-region (match-beginning 1) (match-end 1)
+                                      402)
+                      nil))))))
 
-(defun isg/val (property)
-  (get 'isg/local property))
+  (defun isg/val (property)
+    (get 'isg/local property))
 
-(defun isg/start-shell (shell-name)
-  "start a new shell"
-  (interactive "sShell name: ")
-  (shell)
-  (if (string= "" shell-name)
-      (rename-uniquely)
-    (rename-buffer shell-name)))
+  (defun isg/start-shell (shell-name)
+    "start a new shell"
+    (interactive "sShell name: ")
+    (shell)
+    (if (string= "" shell-name)
+        (rename-uniquely)
+      (rename-buffer shell-name)))
 
+  (defun isg/unicode-symbol (name)
+    "Translate a symbolic name for a Unicode character -- e.g., LEFT-ARROW
+         or GREATER-THAN into an actual Unicode character code. "
+    (decode-char 'ucs (case name
+                        (left-arrow 8592)
+                        (up-arrow 8593)
+                        (right-arrow 8594)
+                        (down-arrow 8595)
+                        (double-vertical-bar #X2551)
+                        (equal #X003d)
+                        (not-equal #X2260)
+                        (identical #X2261)
+                        (not-identical #X2262)
+                        (less-than #X003c)
+                        (greater-than #X003e)
+                        (less-than-or-equal-to #X2264)
+                        (greater-than-or-equal-to #X2265)
+                        (logical-and #X2227)
+                        (logical-or #X2228)
+                        (logical-neg #X00AC)
+                        ('nil #X2205)
+                        (horizontal-ellipsis #X2026)
+                        (double-exclamation #X203C)
+                        (prime #X2032)
+                        (double-prime #X2033)
+                        (for-all #X2200)
+                        (there-exists #X2203)
+                        (element-of #X2208)
+                        (square-root #X221A)
+                        (squared #X00B2)
+                        (cubed #X00B3)
+                        (lambda #X03BB)
+                        (alpha #X03B1)
+                        (beta #X03B2)
+                        (gamma #X03B3)
+                        (delta #X03B4))))
+
+  (defun isg/substitute-pattern-with-unicode (pattern symbol)
+    "Add a font lock hook to replace the matched part of PATTERN with the
+         Unicode symbol SYMBOL looked up with UNICODE-SYMBOL."
+    (font-lock-add-keywords
+     nil `((,pattern
+            (0 (progn (compose-region (match-beginning 1) (match-end 1)
+                                      ,(isg/unicode-symbol symbol)
+                                      'decompose-region)
+                      nil))))))
+
+  (defun isg/substitute-patterns-with-unicode (patterns)
+    "Call SUBSTITUTE-PATTERN-WITH-UNICODE repeatedly."
+    (mapcar #'(lambda (x)
+                (isg/substitute-pattern-with-unicode (car x)
+                                                     (cdr x)))
+            patterns))
 #+END_SRC
 
 * machine settings
@@ -619,59 +672,22 @@
     (use-package psc-ide)
     (add-hook 'purescript-mode-hook 'setup-purescript-mode))
 
-  (defun unicode-symbol (name)
-    "Translate a symbolic name for a Unicode character -- e.g., LEFT-ARROW
-       or GREATER-THAN into an actual Unicode character code. "
-    (decode-char 'ucs (case name
-                        (left-arrow 8592)
-                        (up-arrow 8593)
-                        (right-arrow 8594)
-                        (down-arrow 8595)
-                        (double-vertical-bar #X2551)
-                        (equal #X003d)
-                        (not-equal #X2260)
-                        (identical #X2261)
-                        (not-identical #X2262)
-                        (less-than #X003c)
-                        (greater-than #X003e)
-                        (less-than-or-equal-to #X2264)
-                        (greater-than-or-equal-to #X2265)
-                        (logical-and #X2227)
-                        (logical-or #X2228)
-                        (logical-neg #X00AC)
-                        ('nil #X2205)
-                        (horizontal-ellipsis #X2026)
-                        (double-exclamation #X203C)
-                        (prime #X2032)
-                        (double-prime #X2033)
-                        (for-all #X2200)
-                        (there-exists #X2203)
-                        (element-of #X2208)
-                        (square-root #X221A)
-                        (squared #X00B2)
-                        (cubed #X00B3)
-                        (lambda #X03BB)
-                        (alpha #X03B1)
-                        (beta #X03B2)
-                        (gamma #X03B3)
-                        (delta #X03B4))))
-
-  (defun substitute-pattern-with-unicode (pattern symbol)
-    "Add a font lock hook to replace the matched part of PATTERN with the
-       Unicode symbol SYMBOL looked up with UNICODE-SYMBOL."
-    (font-lock-add-keywords
-     nil `((,pattern
-            (0 (progn (compose-region (match-beginning 1) (match-end 1)
-                                      ,(unicode-symbol symbol)
-                                      'decompose-region)
-                      nil))))))
-
-  (defun substitute-patterns-with-unicode (patterns)
-    "Call SUBSTITUTE-PATTERN-WITH-UNICODE repeatedly."
-    (mapcar #'(lambda (x)
-                (substitute-pattern-with-unicode (car x)
-                                                 (cdr x)))
-            patterns))
+  (defun substitute-purescript-syntax-with-unicode ()
+    (isg/substitute-patterns-with-unicode
+     (list (cons "\\(<-\\)" 'left-arrow)
+           (cons "\\(->\\)" 'right-arrow)
+           (cons "\\(/=\\)" 'not-equal)
+           (cons "\\(()\\)" 'nil)
+           (cons "\\<\\(forall\\)\\>" 'for-all)
+           (cons "\\(&&\\)" 'logical-and)
+           (cons "\\(||\\)" 'logical-or)
+           (cons "\\<\\(not\\)\\>" 'logical-neg)
+           (cons "\\(>\\)\\[^=\\]" 'greater-than)
+           (cons "\\(<\\)\\[^=\\]" 'less-than)
+           (cons "[^>]\\(>=\\)" 'greater-than-or-equal-to) ; substitute >= but ignore >>=
+           (cons "\\(<=\\)" 'less-than-or-equal-to)
+           (cons "\\(''\\)" 'double-prime)
+           (cons "\\('\\)" 'prime))))
 
   (defun setup-purescript-mode ()
     (interactive)
@@ -679,31 +695,7 @@
     (company-mode)
     (flycheck-mode)
     (turn-on-purescript-indentation)
-    (substitute-patterns-with-unicode
-     (list (cons "\\(<-\\)" 'left-arrow)
-           (cons "\\(->\\)" 'right-arrow)
-           ;; (cons "\\(==\\)" 'identical)
-           (cons "\\(/=\\)" 'not-equal)
-           (cons "\\(()\\)" 'nil)
-           ;; (cons "\\<\\(sqrt\\)\\>" 'square-root)
-           (cons "\\<\\(forall\\)\\>" 'for-all)
-           (cons "\\(&&\\)" 'logical-and)
-           (cons "\\(||\\)" 'logical-or)
-           (cons "\\<\\(not\\)\\>" 'logical-neg)
-           (cons "\\(>\\)\\[^=\\]" 'greater-than)
-           (cons "\\(<\\)\\[^=\\]" 'less-than)
-           ;; (cons "\\(>>=\\)" 'up-arrow) ; bind
-           (cons "[^>]\\(>=\\)" 'greater-than-or-equal-to) ; substitute >= but ignore >>=
-           (cons "\\(<=\\)" 'less-than-or-equal-to)
-           ;; (cons "\\<\\(alpha\\)\\>" 'alpha)
-           ;; (cons "\\<\\(beta\\)\\>" 'beta)
-           ;; (cons "\\<\\(gamma\\)\\>" 'gamma)
-           ;; (cons "\\<\\(delta\\)\\>" 'delta)
-           ;; (cons "\\(''\\)" 'double-prime)
-           ;; (cons "\\('\\)" 'prime)
-           ;; (cons "\\(!!\\)" 'double-exclamation)
-           ;; (cons "\\(\\.\\.\\)" 'horizontal-ellipsis)
-           )))
+    (substitute-purescript-syntax-with-unicode))
 #+END_SRC
 
    purescript syntax:
